# sentir-mais-classifier

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  classifier.py  main.py  schemas.py  settings.py
scripts/: classify.sh
tests/: test_classifier.py  test_main.py  test_schemas.py
