[project]
name = "sentir-mais-classifier"
version = "0.1.0"
description = "Classifier API for Sentir Mais"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1,<1.0.0",
  "pydantic>=2.11.7,<3.0.0",
  "torch>=2.7.1,<3.0.0",
  "transformers>=4.53.3,<5.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
]

[project.scripts]
sentir-mais-classifier = "app.main:run"

[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
